Fix CurveFooter alignment on individual writeup pages

--- a/client/app/ramunchers-ctf/[slug]/style.module.scss
+++ b/client/app/ramunchers-ctf/[slug]/style.module.scss
@@ -13,7 +13,8 @@
   z-index: 1;
   margin-bottom: 80vh; // Account for the Contact footer height
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   padding: 150px 200px;
 }
 
